WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17821
[SOUP] POST requests are empty
https://bugs.webkit.org/show_bug.cgi?id=17821
Summary
[SOUP] POST requests are empty
Tommi Komulainen
Reported
2008-03-13 03:14:58 PDT
Step to reproduce: try logging in to bugs.webkit.org The HTTP SOUP backend seems to be ignoring the request body.
Attachments
SOUP: send the HTTP request body as well
(1.99 KB, patch)
2008-03-13 03:19 PDT
,
Tommi Komulainen
alp
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tommi Komulainen
Comment 1
2008-03-13 03:19:04 PDT
Created
attachment 19722
[details]
SOUP: send the HTTP request body as well
Alp Toker
Comment 2
2008-03-13 19:44:40 PDT
Comment on
attachment 19722
[details]
SOUP: send the HTTP request body as well r=me
Alp Toker
Comment 3
2008-03-13 19:49:02 PDT
Landed in
r31046
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug